# stackr-rs

./: Cargo.toml  Makefile  README.md  ROADMAP.md
examples/: add.rs  custom_builtin.rs  custom_error.rs  custom_word.rs  execute_address.rs  format_code.rs  if.rs  loop.rs  print_documentation.rs  repl.rs
src/: lib.rs
src/interpreter/: address.rs  address_cache.rs  evaluate.rs  instruction.rs  location.rs  mod.rs  ram_value.rs  stack_value.rs  stringify.rs
src/interpreter/built_ins/: addressing.rs  compiler.rs  conditionals.rs  control_flow.rs  equality.rs  logic.rs  math.rs  mod.rs  read_mode.rs  runtime.rs  stack_ops.rs  string.rs
