[package]
name = "stackr-rs"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A stack-based interpreter to be embedded in your application. Heavily inspired by Forth."
repository = "https://github.com/ericrobolson/stackr-rs"
keywords = ["forth", "stack", "interpreter", "embedded", "scripting"]
categories = ["game-development"]
exclude = ["target/", "Makefile", ".github/"]


[dependencies]
